[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rcal"]

[project]
name = "rcal"
authors = [
    {name = "Joseph T. Iosue", email = "jtiosue@gmail.com"},
]
description = "A package for calibrating reviews"
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "Apache Software License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy"]
version = "0.0.0"

[project.urls]
"Source" = "https://github.com/jtiosue/rcal"
